fix IDEA warnings "Simplifiable conditional expression"